Fixed canvas offset bug, introduced by stretching canvas through CSS

--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,11 @@
-.map-div{
+/* .map-div{
     background-color: blueviolet;
 }
-
+*/
 canvas{
-    width: 300px;
-    height: 300px;
+    /* width: 600px; */
+    /* height: 300px; */
     background-color: aquamarine;
+    /* width: 100vw; */
+    /* height: 100vh; */
 }
